--- a/src/App.css
+++ b/src/App.css
@@ -53,3 +53,23 @@
   border-bottom: 15px solid transparent;
   margin-left: 5px;
 }
+.container-content {
+  width: 80%;
+  margin-left: 150px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2) ;
+
+}
+.container-content h3 {
+margin-left: 10px;
+}
+.table-responsive {
+  margin: 20px;
+  border-radius: 8px;
+  box-shadow: #3AC05E 0 4px 8px 0;
+}
+.pagination {
+  margin-left: 40px;
+}
