--- a/src/App.css
+++ b/src/App.css
@@ -53,7 +53,7 @@
   border-bottom: 15px solid transparent;
   margin-left: 5px;
 }
-.card {
+.container-card {
   width: 80%;
   margin-left: 150px;
   margin-top: 10px;
